fixing broken invite accept. fixing css anomoly in invite list.

--- a/css/site/spaces.less
+++ b/css/site/spaces.less
@@ -80,7 +80,7 @@
 				.invite-actions {display: none;}
 			}
 			.invite-data {
-				div.item-actions > a {width: 16rem; height: @item_height; margin: -@item_pad_top -@item_pad_side 0 0; padding: 0 @item_pad_side 0 16rem; line-height: @item_height + 4rem;}
+				div.item-actions > a {width: 16rem; height: (@item_height - 8); margin: -@item_pad_top -@item_pad_side 0 0; padding: 0 @item_pad_side 0 16rem; line-height: @item_height + 4rem;}
 				h2 {font-size: 14rem; max-width: 90%; .ellipsis();}
 				h2 {
 					icon {font-size: 13rem; opacity: 0.7;}
